@@ -2,7 +2,33 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.4'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.sonarqube' version "6.2.0.5505"
+	id 'jacoco'
+	id 'co.uzzu.dotenv.gradle' version '4.0.0'
 }
+
+sonar {
+	properties {
+		property "sonar.projectKey", "CarlosAraujo_ExpenseManager"
+		property "sonar.host.url", "http://localhost:9000"
+		property "sonar.token", env.SONAR_TOKEN.orElse("")
+
+		property "sonar.sources", "src/main/java"
+		property "sonar.tests", "src/test/java"
+		property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+
+		property "sonar.coverage.exclusions", [
+				"**/config/**",
+				"**/dto/**",
+				"**/entity/**",
+				"**/CarlosAraujoApplication.java",
+				"**/exception/**",
+				"**/mapper/**",
+				"**/controller/**"
+		].join(",")
+	}
+}
+
 
 group = 'br.edu.infnet'
 version = '0.0.1-SNAPSHOT'
@@ -55,4 +81,22 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+
+	reports {
+		junitXml.required = true
+		html.required = true
+	}
+}
+
+test {
+	finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		xml.required = true
+		html.required = true
+	}
 }
